--- a/strona/css/style.css
+++ b/strona/css/style.css
@@ -21,14 +21,14 @@ h2 {
 }
 #title
 {
-	padding-top:100px;
-	text-shadow: 2px 3px 2px #777;
+	padding-top:60px;
+	text-shadow: 2px 3px 2px #555;
 	width:100%;
 	height:350px;
-	border-bottom:4px outset #ddd;
+	border-bottom:4px outset #fff;
 	text-align:center;
-	font-size:52px;
-    background-image: url("../grafiki_probne/background2.png");
+	font-size:48px;
+    background-image: url("../grafiki/tlo/background2.png");
     background-repeat: no-repeat;
     background-size:cover;
     filter: opacity(75%);
@@ -99,10 +99,24 @@ p {
 	display: block;
 	max-height: 550px;
 	max-width: 534px;
+	margin-top:30px;
+}
+.podwojne_wykresy{
+	display: block;
+	max-height: 450px;
+	max-width: 510px;
 }
 #clc {
-	max-width:1000px;
-	max-height:700px;
+	max-width:1070px;
+	max-height:720px;
+}
+#proc_udzialu{
+	max-width:800px;
+	max-height:650px;
+}
+#mapa_zgodnosci{
+	max-width:700px;
+	max-height:570px;
 }
 .wykres{
 	height: 354px;
@@ -110,16 +124,14 @@ p {
 }
 
 .maps{
-	height:410px;
+	height:490px;
 	width:534px;
 	float:left;
-	margin-top:30px;
 }
 
 .maps_text{
 	text-align:center;
 	font-weight:150;
-	float:left;
 	height:20px;
 	width:534px;
 	padding-top:10px
@@ -244,7 +256,12 @@ table {
 	border-right: 0;
   }
 
-
+#statystyki_tabela{
+	overflow-x: auto;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1050px!important;
+}
 
 
 #statystyki_tabela::-webkit-scrollbar {
